# NOTE: This project uses UV as the package manager.
# Dependencies are defined in [project.dependencies] and [project.optional-dependencies] sections below.
# UV uses standard PEP 621 pyproject.toml format with uv.lock for reproducible builds.
[project]
name = "{{ cookiecutter.pypi_package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "{{ cookiecutter.license }}"}
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

# Core production dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "rich>=13.5.0",
    {% if cookiecutter.include_cli == "yes" -%}
    "click>=8.1.0",
    {% endif -%}

    # Cross-Version Compatibility Dependencies
    # =========================================
    # This template targets Python 3.10-3.14. Add version-specific dependencies
    # here if your code needs compatibility shims or replacements.
    #
    # COMMON BACKPORTS FOR 3.10 COMPATIBILITY:
    #   "tomli>=2.0.0; python_version < '3.11'",  # TOML parser (tomllib added in 3.11)
    #   "exceptiongroup>=1.1.0; python_version < '3.11'",  # Exception groups (added in 3.11)
    #   "typing-extensions>=4.12.0",  # Backport newer typing features
    #
    # AVAILABLE IN 3.11+:
    #   - tomllib: Native TOML parser
    #   - asyncio.TaskGroup: Structured concurrency
    #   - typing.Self, TypeVarTuple, Never, LiteralString
    #   - ExceptionGroup and except* syntax
    #
    # PEP 594 REMOVALS IN 3.13 (add replacements if needed):
    #   Removed modules: aifc, audioop, cgi, cgitb, chunk, crypt, imghdr, mailcap,
    #   msilib, nis, nntplib, ossaudiodev, pipes, sndhdr, spwd, sunau, telnetlib,
    #   uu, xdrlib
    #
    # Examples of version-specific dependencies:
    #   # Backport for Python 3.10
    #   "tomli>=2.0.0; python_version < '3.11'",
    #
    #   # Replacement for removed modules in 3.13+
    #   "legacy-cgi>=2.6.1; python_version >= '3.13'",  # If you need cgi module
    #   "filetype>=1.2.0",  # Better alternative to imghdr/sndhdr
    #
    #   # Typing enhancements
    #   "typing-extensions>=4.12.0; python_version < '3.13'",  # For latest typing features
    #
    # PYTHON 3.14+ CONSIDERATIONS:
    #   - from __future__ import annotations is deprecated (but still works until 2029+)
    #   - Free-threaded mode (python3.14t) may need GIL-compatible packages
    #   - NotImplemented in boolean context raises TypeError (was warning)
    #   - PEP 649: Deferred annotation evaluation (impacts runtime introspection)
    #
    # Examples for 3.14+ compatibility:
    #   # Free-threaded mode support (check package documentation)
    #   "numpy>=2.1.0; python_version >= '3.14'",  # Supports free-threaded mode
    #
    # UV handles these automatically based on the Python version being used.
    # See: https://docs.astral.sh/uv/concepts/dependencies/#dependency-specifiers
]

# Optional dependency groups
[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",

    # Code Quality (always included)
    "ruff>=0.9.0",
    "basedpyright>=1.18.0",  # Stricter type checker (replaces mypy)
    "bandit>=1.7.0",
    "vulture>=2.11",  # Dead code detection
    "pip-audit>=2.7.0",  # Python vulnerability scanning
    "darglint>=1.8.1",  # Docstring argument validation

    # Pre-commit
    {% if cookiecutter.use_pre_commit == "yes" -%}
    "pre-commit>=3.3.0",
    {% endif -%}

    # Documentation
    {% if cookiecutter.use_mkdocs == "yes" -%}
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "griffe-pydantic>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "python-frontmatter>=1.1.0",
    "ruamel-yaml>=0.18.0",
    {% endif -%}

    # Development Tools
    "interrogate>=1.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "safety>=3.7.0",
    {% if cookiecutter.include_nox == "yes" -%}
    "nox>=2024.10.16",  # Fixed: was 2025 (typo)
    "nox-uv>=0.6.3",    # Fixed: max available version is 0.6.3, not 1.0.0
    {% endif -%}
    {% if cookiecutter.include_mutation_testing == "yes" -%}
    "mutmut>=3.3.1",
    {% endif -%}

    # Google Cloud Assured OSS (optional - uncomment if using Assured OSS)
    "google-auth>=2.0.0",
    # "google-cloud-assured-oss>=0.1.0",  # Package not yet available in PyPI
    "google-api-core>=2.0.0",
    "python-dotenv>=1.0.0",  # For loading .env files
]
{% if cookiecutter.include_ml_dependencies == "yes" %}
# Machine Learning dependencies
ml = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.14.0",
]
{% endif %}
{% if cookiecutter.include_api_framework == "yes" %}
# API framework dependencies
api = [
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.18",
    "starlette>=0.49.1",
]
{% endif %}
{% if cookiecutter.include_sentry == "yes" %}
# Monitoring and observability
monitoring = [
    "sentry-sdk[fastapi]>=2.0.0",  # Error tracking and performance monitoring
]
{% endif %}
{% if cookiecutter.include_background_jobs == "arq" %}
# Background job processing with ARQ (async-native, Redis-based)
jobs = [
    "arq>=0.25.0",  # Async task queue
    "redis[hiredis]>=5.0.0",  # Redis client with C parser
]
{% endif %}
{% if cookiecutter.include_background_jobs == "celery" %}
# Background job processing with Celery (traditional, supports multiple brokers)
jobs = [
    "celery[redis]>=5.3.0",  # Distributed task queue
    "redis[hiredis]>=5.0.0",  # Redis broker
]
{% endif %}
{% if cookiecutter.include_caching == "yes" %}
# Caching infrastructure
caching = [
    "redis[hiredis]>=5.0.0",  # Redis client with C parser for performance
]
{% endif %}
{% if cookiecutter.include_load_testing == "yes" %}
# Load and performance testing
load_testing = [
    "locust>=2.20.0",  # Python-based load testing with web UI
]
{% endif %}
{% if cookiecutter.include_cli == "yes" %}
[project.scripts]
{{ cookiecutter.cli_tool_name }} = "{{ cookiecutter.project_slug }}.cli:cli"
{% endif %}
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

# Ruff Configuration - Consolidated Linting & Formatting
[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version_short }}"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# Rule selection aligned with Google Python Style Guide + PyStrict enhancements
# Reference: https://google.github.io/styleguide/pyguide.html
# Reference: https://github.com/Ranteck/PyStrict-strict-python
select = [
    # Core Python style (Google-aligned)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming (Google naming conventions)
    "D",    # pydocstyle (Google docstring style)
    "UP",   # pyupgrade (modern Python syntax)

    # Type annotations (Google requires type hints)
    "ANN",  # flake8-annotations (type hint enforcement)
    "TCH",  # flake8-type-checking (TYPE_CHECKING imports)
    "FA",   # flake8-future-annotations (use from __future__ import annotations)

    # Code quality (Pylint-equivalent rules)
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "PL",   # Pylint rules (Google uses Pylint)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "RET",  # flake8-return
    "PIE",  # flake8-pie

    # Security
    "S",    # flake8-bandit

    # Best practices
    "T10",  # flake8-debugger (no debugger statements in production)
    "T20",  # flake8-print (no print in production)
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "PTH",  # flake8-use-pathlib
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez

    # Performance and modernization
    "PERF", # Performance anti-patterns
    "FURB", # Refurb - modernization

    # Additional quality
    "LOG",  # Logging best practices
    "G",    # flake8-logging-format (logging string formatting)
    "TRY",  # Exception handling
    "ERA",  # Commented-out code
    "FBT",  # Boolean trap detection
    "ASYNC",# Async/await best practices
    "RUF",  # Ruff-specific rules

    # PyStrict additions (stricter standards)
    "BLE",  # flake8-blind-except (no bare except or except Exception)
    "EM",   # flake8-errmsg (error message best practices)
    "SLF",  # flake8-self (private member access)
    "INP",  # flake8-no-pep420 (require __init__.py in packages)
    "ISC",  # flake8-implicit-str-concat (implicit string concatenation)
    "PGH",  # pygrep-hooks (deprecated type comments, blanket ignores)
    "RSE",  # flake8-raise (raise statement best practices)
    "TID",  # flake8-tidy-imports (banned imports, relative imports)
    "YTT",  # flake8-2020 (Python version checks)
]

ignore = [
    # Formatting (handled by ruff format)
    "E501",   # line too long (handled by formatter)
    "COM812", # missing trailing comma (handled by formatter)
    "ISC001", # implicit string concatenation (handled by formatter)

    # Docstring style (Google convention conflicts)
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D212",   # multi-line-summary-first-line (conflicts with D213)
    "D105",   # missing docstring in magic method (__str__, etc.)
    "D107",   # missing docstring in __init__ (class docstring sufficient)

    # Type annotations (pragmatic exceptions)
    # Note: ANN101/ANN102 removed - rules deprecated in Ruff (self/cls annotation not needed)
    "ANN401", # dynamically typed expressions (Any) - sometimes necessary

    # Pylint rules (too strict for all cases)
    "PLR0913", # too many arguments (>5) - sometimes necessary for APIs
    "PLR2004", # magic value comparison - too noisy
    "PLW2901", # outer loop variable overwritten - sometimes intentional

    # Practical exceptions
    "B008",   # function calls in defaults (Pydantic/FastAPI pattern)
    "S101",   # assert (pytest uses assert statements)
    "PTH123", # open() vs pathlib (sometimes direct open is clearer)
    "FBT001", # Boolean positional arg (acceptable in DSLs)
    "FBT002", # Boolean default arg (acceptable in DSLs)
    "TRY003", # Long exception messages (descriptive is good)
]

# McCabe Complexity Configuration (Google/Pylint alignment)
[tool.ruff.lint.mccabe]
max-complexity = 10  # Google/Pylint default, stricter than we had

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

[tool.ruff.lint.per-file-ignores]
# Module init files
"__init__.py" = ["F401", "D104"]

# Test files (relaxed rules for test code)
"tests/**/*.py" = [
    "ANN",    # Type annotations not required in tests
    "ARG",    # Unused arguments (fixtures)
    "D",      # Docstrings not required in tests
    "PLR",    # Pylint refactor suggestions
    "PLC0415", # Imports inside test functions are idiomatic
    "ERA",    # Commented code (test debugging)
    "SLF",    # Private member access (testing internals)
    "BLE",    # Blind except (test error handling)
    "EM",     # Error messages (test exceptions)
    "TRY",    # Exception handling (test assertions)
    "INP",    # No __init__.py required for test directories
    # Security rules OK to skip in tests (specific, not blanket S)
    "S101",   # assert_used - pytest uses asserts
    "S105",   # hardcoded_password_string - test credentials are fake
    "S106",   # hardcoded_password_funcarg - test fixtures with fake passwords
    "S107",   # hardcoded_password_default - test default values
    "S108",   # hardcoded_tmp_directory - test temp paths are intentional
    "S311",   # random - non-crypto random in tests is fine
    "S113",   # request_without_timeout - test HTTP calls may be mocked
]

# Scripts (utility code - not packages)
"scripts/**/*.py" = [
    "ANN", "D", "T20", "TRY", "PTH", "PLR",
    "INP",    # Scripts are not packages
    "EM",     # Utility scripts don't need perfect error messages
    "T10",    # Debugger allowed during script development
    "BLE",    # Blind except (error handling in scripts)
    "C901",   # Complexity allowed in utility scripts
    "RUF012", # Class variable annotations (not needed in scripts)
    "SIM",    # Simplification suggestions (scripts prioritize clarity)
    "F821",   # Allow dynamic imports
    "G201",   # Logging patterns (scripts may use .error with exc_info)
    # Security rules OK to skip in scripts (specific, not blanket S)
    "S101",   # assert_used - scripts may use asserts for validation
    "S104",   # hardcoded_bind_all_interfaces - dev scripts may bind 0.0.0.0
    "S108",   # hardcoded_tmp_directory - scripts use /tmp intentionally
    "S311",   # random - non-crypto random in scripts is fine
    "S603",   # subprocess_without_shell_equals_true - scripts validate inputs
    "S607",   # start_process_with_partial_path - scripts use PATH
]

# Benchmarks (performance testing)
"benchmarks/**/*.py" = [
    "ANN", "D", "T20", "ARG", "TRY", "PLR",
    "INP",    # Benchmarks are not packages
    "EM",     # Benchmark exceptions
]

# Tools (development utilities)
"tools/**/*.py" = [
    "ANN", "D", "T20", "TRY", "PLR",
    "INP",    # Tools are not packages
    "EM",     # Tool exceptions
    "BLE",    # Blind except (error handling in tools)
    "C901",   # Complexity allowed in utility scripts
]

{% if cookiecutter.include_nox == "yes" -%}
# Nox configuration
"noxfile.py" = ["ANN", "D", "T20", "PLR", "INP", "PLC0415"]
{% endif -%}

# Fuzz testing (Atheris harnesses have specific patterns)
"fuzz/**/*.py" = [
    "N802",   # TestOneInput required by Atheris
    "S110",   # try-except-pass is intentional for fuzzing
    "BLE",    # Blind except is necessary in fuzz targets
    "INP",    # Fuzz tests are not packages
    "ANN", "D", "TRY",
]

# Claude skills and scripts
".claude/**/*.py" = [
    "T20",    # Print allowed for CLI output
    "C901",   # Complexity allowed in utility scripts
    "ANN", "D", "TRY", "PLR",
    "INP",    # Not packages
]

# BasedPyright Configuration
# Replaces MyPy with faster, stricter type checking
# Reference: https://docs.basedpyright.com
[tool.basedpyright]
pythonVersion = "{{ cookiecutter.python_version }}"
pythonPlatform = "All"

# Type checking mode: basic, standard, strict, all
# "strict" aligns with Google Python Style Guide requirements
typeCheckingMode = "strict"

# Source paths
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "build",
    "dist",
]

# Strict mode customizations
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportUninitializedInstanceVariable = "warning"
reportInvalidStringEscapeSequence = "error"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportImplicitStringConcatenation = "warning"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportUnhashable = "error"
reportInvalidTypeVarUse = "error"

# BasedPyright-specific enhancements
reportUnreachable = "error"           # Detect unreachable code
reportAny = "warning"                  # Flag usage of Any type
reportExplicitAny = "warning"          # Flag explicit Any annotations
reportIgnoreCommentWithoutRule = "warning"  # Require specific ignore rules

# PyStrict strict inference settings
strictListInference = true             # Infer list element types strictly
strictDictionaryInference = true       # Infer dict key/value types strictly
strictSetInference = true              # Infer set element types strictly
strictParameterNoneValue = true        # Require explicit Optional for None defaults
analyzeUnannotatedFunctions = true     # Analyze functions without type hints
deprecateTypingAliases = true          # Warn on deprecated typing module aliases

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/{{ cookiecutter.project_slug }}",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-fail-under={{ cookiecutter.code_coverage_target }}",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests",
    "py310: marks tests specific to Python 3.10",
    "py311plus: marks tests requiring Python 3.11+",
    "py313plus: marks tests requiring Python 3.13+ (PEP 594 removals)",
    "py314plus: marks tests requiring Python 3.14+ (free-threaded, PEP 649)",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
branch = true
{% if cookiecutter.include_sonarcloud == "yes" -%}
relative_files = true  # Required for SonarCloud in GitHub Actions
{% endif -%}
omit = [
    # Test files
    "*/tests/*",
    "*/test_*.py",

    # Python internals
    "*/__pycache__/*",
    "*/site-packages/*",

    # Development artifacts (from image_detection best practices)
    "validation/*",     # Validation/verification scripts
    "benchmarks/*",     # Benchmarking framework
    "data/*",           # Data processing scripts
    "scripts/*",        # Utility scripts
    "notebooks/*",      # Jupyter notebooks
    "tmp_cleanup/*",    # Temporary files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

# Interrogate Configuration (Docstring Coverage)
[tool.interrogate]
verbose = 1
fail-under = {{ cookiecutter.docstring_coverage_target }}
exclude = ["tests", "docs", "build", "dist"]
ignore-init-method = true
ignore-init-module = true
color = true

# Darglint Configuration (Docstring Argument Validation)
# Validates that docstring arguments match function signatures
# Reference: https://github.com/terrencepreilly/darglint
[tool.darglint]
# Google-style docstrings (matches ruff pydocstyle convention)
docstring_style = "google"
# Strictness levels: short, long, full
# - short: Only documented items must exist in signature
# - long: All parameters must be documented (recommended)
# - full: Types in docstring must match annotations
strictness = "long"
# Ignore missing parameter documentation in these cases
ignore = [
    "DAR101",  # Missing parameter(s) in Docstring (initially lenient)
    "DAR201",  # Missing "Returns" in Docstring (handled by pydocstyle)
    "DAR301",  # Missing "Yields" in Docstring
    "DAR401",  # Missing exception(s) in Raises section
]
# Ignore in these directories
ignore_regex = "^(tests|scripts|benchmarks|tools)/.*$"

# Mutation Testing Configuration (mutmut)
[tool.mutmut]
paths_to_mutate = "src/"
backup = false
runner = "uv run pytest -x --assert=plain -o addopts=''"
tests_dir = "tests/"
dict_synonyms = "Struct, NamedStruct"

# Bandit Security Configuration
# Run: uv run bandit -c pyproject.toml -r src/
# Reference: https://bandit.readthedocs.io/
[tool.bandit]
# Directories to exclude from scanning
exclude_dirs = [
    "tests",
    "scripts",
    "benchmarks",
    "tools",
    "fuzz",
    "docs",
    ".venv",
    "venv",
    "build",
    "dist",
]

# Skip these checks (false positives or acceptable in context)
skips = [
    "B101",  # assert_used - pytest uses assert statements
    "B104",  # hardcoded_bind_all_interfaces - often intentional for dev servers
    "B311",  # random - non-crypto random is fine for non-security purposes
    "B404",  # import_subprocess - subprocess is needed, usage is checked
    "B603",  # subprocess_without_shell_equals_true - we validate inputs
]

# Targets to scan (can be overridden on command line)
targets = ["src"]

# Severity and confidence levels
# Run with -ll (medium+) or -lll (high only) for less noise
# These are applied when using -c pyproject.toml
[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/*_test.py"]

# Vulture Configuration (Dead Code Detection)
# Detects unused code to maintain clean codebase
# Run: uv run vulture src/
[tool.vulture]
min_confidence = 80
paths = ["src/"]
exclude = [
    "tests/",
    "docs/",
    ".venv/",
    "venv/",
    "build/",
    "dist/",
]
# Whitelist common false positives
ignore_names = [
    "visit_*",  # AST visitor methods
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
    "__*__",  # Magic methods
]

# UV Configuration
[tool.uv]
# Note: UV now recommends using [dependency-groups] instead of dev-dependencies
# We use [project.optional-dependencies] for dev dependencies (PEP 621 standard)

# Package Index Configuration
# Google Assured OSS as primary source with PyPI fallback
# See .env.example for required Google Cloud credentials and configuration
#
# Indexes are configured at runtime via environment variables:
# - GOOGLE_CLOUD_PROJECT: Your GCP project ID
# - ASSURED_OSS_REGION: Region (us, europe, asia)
# - ASSURED_OSS_REPOSITORY: Repository name (default: assuredoss)
# - USE_ASSURED_OSS: Enable/disable Assured OSS (true/false)
#
# Index URL format:
# https://{ASSURED_OSS_REGION}-python.pkg.dev/{GOOGLE_CLOUD_PROJECT}/{ASSURED_OSS_REPOSITORY}/simple/
#
# UV automatically falls back to PyPI when packages are not found in Assured OSS.
# Authentication uses GOOGLE_APPLICATION_CREDENTIALS or GOOGLE_APPLICATION_CREDENTIALS_B64.

{% if cookiecutter.include_semantic_release == "yes" -%}
# Semantic Release Configuration
# Automates versioning and changelog generation based on conventional commits
# Reference: https://python-semantic-release.readthedocs.io/
[tool.semantic_release]
# Version location in this file
version_toml = ["pyproject.toml:project.version"]

# Commit message parsing
commit_parser = "conventional_commits"
commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }

# Version behavior
major_on_zero = false  # Don't bump to 1.0.0 automatically
allow_zero_version = true  # Allow 0.x.x versions

# Branches configuration
[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.branches.release]
match = "release/*"
prerelease = true
prerelease_token = "rc"

# Changelog configuration
[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^ci:",
    "^build:",
]

[tool.semantic_release.changelog.environment]
block_start_string = "{{ '{' ~ '%' }}"
block_end_string = "{{ '%' ~ '}' }}"
variable_start_string = "{{ '{' ~ '{' }}"
variable_end_string = "{{ '}' ~ '}' }}"
comment_start_string = "{{ '{' ~ '#' }}"
comment_end_string = "{{ '#' ~ '}' }}"
trim_blocks = true
lstrip_blocks = true
keep_trailing_newline = true

# Remote configuration
[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

# Publishing configuration
[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
{% endif -%}
